Homework rework